--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm">
+				<div class="col">
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
@@ -58,7 +58,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm">
+				<div class="col">
 
 					<div class="flip-card">
 						<div class="flip-card-inner">
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm">
+				<div class="col">
 					<div class="flip-card">
 						<div class="flip-card-inner">
 							<div class="flip-card-front">
