--- a/producto.html
+++ b/producto.html
@@ -151,7 +151,7 @@
 							<div class="col text-success"> <h3>59 € </h3></div>
 							<div class="w-100"></div>
 							<div class="col">
-								<a href="producto.html" class="btn btn-success text-uppercase">View deal</a>
+								<a href="#" class="btn btn-success text-uppercase">View deal</a>
 							</div>
 						</div>
 					</div>
@@ -180,7 +180,7 @@
 							<div class="col text-success"> <h3>50 € </h3></div>
 							<div class="w-100"></div>
 							<div class="col">
-								<a href="producto.html" class="btn btn-success text-uppercase">View deal</a>
+								<a href="#" class="btn btn-success text-uppercase">View deal</a>
 							</div>
 						</div>
 					</div>
@@ -209,7 +209,7 @@
 							<div class="col text-success"> <h3>80 € </h3></div>
 							<div class="w-100"></div>
 							<div class="col">
-								<a href="producto.html" class="btn btn-success text-uppercase">View deal</a>
+								<a href="#" class="btn btn-success text-uppercase">View deal</a>
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 							<div class="col text-success"> <h3>65 € </h3></div>
 							<div class="w-100"></div>
 							<div class="col">
-								<a href="producto.html" class="btn btn-success text-uppercase">View deal</a>
+								<a href="#" class="btn btn-success text-uppercase">View deal</a>
 							</div>
 						</div>
 					</div>
