--- a/home.html
+++ b/home.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="es">
 <head>
+	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<script type="text/javascript" src="js/js.js"></script>
+
 	<title>Hotel2Day</title>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/js.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,9 +28,7 @@
 				<span class="btn btn-outline-dark m-1 rounded-0 border-0"><i class="fas fa-user-circle"></i></span><span class="btn btn-outline-dark m-1 rounded-0 border-0"><i class="fas fa-globe-asia"></i></span>
 			</div>
 		</div>
-
 	</nav>
-
 	<div class="container-fluid header">
 		<div class="container py-5">
 			<div class="row">
@@ -125,144 +127,52 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<h2 class="text-center mt-5">Unleash the traveler in you</h2>
+		<p class="text-center">discover our featured destinations</p>
+		<div class="grid-container">
+			<div class="rounded-0 border-0 m-1 card text-white bg-dark tokio " >
+				<img class="card-img rounded-0" src="img/portada01.jpg" alt="Card image" >
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap" id="flip">
 
-	<div class="container-fluid container-product">
-		<div class="container mt-3">
-			<h3 class="text-center">Eurostars Ciudad de La Coruña</h3>
-			<div class="row">
-				<div class="col-sm mt-5">
-					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img src="img/c01.jpg" class="d-block w-100" alt="...">
-							</div>
-							<div class="carousel-item">
-								<img src="img/c02.jpg" class="d-block w-100" alt="...">
-							</div>
-							<div class="carousel-item">
-								<img src="img/c03.jpg" class="d-block w-100" alt="...">
-							</div>
-							<div class="carousel-item">
-								<img src="img/c04.jpg" class="d-block w-100" alt="...">
-							</div>
-							<div class="carousel-item">
-								<img src="img/c05.jpg" class="d-block w-100" alt="...">
-							</div>
-							<div class="carousel-item">
-								<img src="img/c06.jpg" class="d-block w-100" alt="...">
-							</div>
-						</div>
-						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-					</div>
-					<button type="button" class="btn btn-outline-success text-uppercase mt-3 float-right" data-toggle="modal" data-target="#modal">contract</button>
+					<h3 class="card-title text-uppercase w-100 text-center">TOKIO</h3>
+					<h3 id="panel" class="w-100 text-center">Hoteles: 9€ - Vuelos: 457€</h3>
+					
 				</div>
-				<div class="col-sm">
-					<div class="accordion mt-5" id="accordionExample">
-						<div class="card rounded-0">
-							<div class="card-header" id="headingOne">
-								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										hotel information
-									</a>
-								</h2>
-							</div>
+			</div>
 
-							<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-								<div class="card-body">
-									Situado en un entorno natural cerca de la conocida Torre de Hércules, en A Coruña, se encuentra el Eurostars Ciudad de La Coruña, un alojamiento de 4 estrellas ideal tanto para turistas ocasionales com para viajeros de negocios.
-									<br><br>
-									Las habitaciones del Eurostars Ciudad de La Coruña son dobles o suites, y están equipadas con televisor vía satélite, baño completo con secador de cabello, minibar y caja fuerte. Asimismo, disponen de aire acondicionado y calefacción, así como servicio despertador.
-								</div>
-							</div>
-						</div>
-						<div class="card rounded-0">
-							<div class="card-header" id="headingTwo">
-								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-										Servicios destacados
-									</a>
-								</h2>
-							</div>
-							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-								<div class="card-body">
-									<div class="row">
-										<div class="col-sm-6">
-											<p><span class="text-success"><i class="fas fa-wifi"></i> </span>Wifi (vestíbulo)</p>
-										</div>
-										<div class="col-sm-6">
-											<p><span class="text-primary"><i class="fas fa-snowflake"></i> </span>Aire acondicionado</p>
-										</div>
-										<div class="col-sm-6">
-											<p><span class="text-success"><i class="fas fa-wifi"></i> </span>Wifi (habitación)</p>
-										</div>
-										<div class="col-sm-6">
-											<p><span class="text-dark"><i class="fas fa-utensils"></i> </span>Restaurante</p>
-										</div>
-										<div class="col-sm-6">
-											<p><span class="text-danger"><i class="fas fa-glass-cheers"></i> </span>Bar del hotel</p>
-										</div>
-										<div class="col-sm-6">
-											<p><span class="text-warning"><i class="fas fa-dumbbell"></i> </span>GYM</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="card rounded-0">
-							<div class="card-header" id="headingThree">
-								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-										Opinions
-									</a>
-								</h2>
-							</div>
-							<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-								<div class="card-body">
-									<div class="row">
-										<div class="col-sm-6 mt-2">
-											<span class="m-3 p-3 mb-2 bg-success text-white">8.2</span>
-											<p class="m-3">Hotel2Day Rating Index ® a partir de 2108 opiniones de:</p>
-											<ul class="opinionSelect">
-												<li><a href="#" class="text-secondary"> Expedia(8.6/10)‎</a></li>
-												<li><a href="#" class="text-secondary">Atrapalo(8.1/10)‎</a></li>
-												<li><a href="#" class="text-secondary">Hoteles.com(8.4/10)‎</a></li>
-												<li><a href="#" class="text-secondary">Zoover(6.8/10)‎</a> </li>
-												<li><a href="#" class="text-secondary">Hotelsclick.com(8.6/10)</a>‎</li>
-											</ul>
-										</div>
-										<div class="col-sm opinion-bar">
-											<p class="mt-3">Ubicación </p>
-											<div class="progress">
-												<div class="progress-bar progress-bar-striped bg-success progress-bar-animated progressbar1" role="progressbar" aria-valuemin="0" aria-valuemax="100">Excelente 8.9 / 10</div>
-											</div>
-											<p class="mt-3">Habitaciones</p>
-											<div class="progress">
-												<div class="progress-bar progress-bar-striped bg-success progress-bar-animated progressbar2" role="progressbar" aria-valuemin="0" aria-valuemax="100">Bueno 7.8 / 10</div>
-											</div>
-											<p class="mt-3">Servicio</p>
-											<div class="progress">
-												<div class="progress-bar progress-bar-striped bg-success progress-bar-animated progressbar3" role="progressbar" aria-valuemin="0" aria-valuemax="100">Muy bueno 8.2 / 10</div>
-											</div>
-											<p class="mt-3">Limpieza</p>
-											<div class="progress">
-												<div class="progress-bar progress-bar-striped bg-success progress-bar-animated progressbar4" role="progressbar" aria-valuemin="0" aria-valuemax="100">Excelente 8.5 / 10</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="rounded-0 border-0 m-1 card text-white bg-dark nuevaYork">
+				<img class="card-img rounded-0" src="img/portada02.jpg" alt="Card image">
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap" id="fade">
+					<h3 class="card-title text-uppercase w-100 text-center">nueva york</h3>
+					<h3 id="panel-fade" class="w-100 text-center">Hoteles: 26€ - Vuelos: 226€</h3>
+				</div>
+			</div>
+
+			<div class="rounded-0 border-0 m-1 card text-white bg-dark sidney">
+				<img class="card-img rounded-0" src="img/portada03.jpg" alt="Card image">
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap">
+					<h2 class="card-title text-uppercase">sídney</h2>
+				</div>
+			</div>
+
+
+			<div class="rounded-0 border-0 m-1 card text-white bg-dark barcelona">
+				<img class="card-img rounded-0" src="img/portada04.jpg" alt="Card image">
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap">
+					<h2 class="card-title text-uppercase">barcelona</h2>
+				</div>
+			</div>
+
+			<div class="rounded-0 border-0 m-1 card text-white bg-dark sanFrancisco">
+				<img class="card-img rounded-0" src="img/portada05.jpg" alt="Card image">
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap" id="animation">
+					<h3 class="card-title text-uppercase w-100 text-center">San Francisco</h3>
+					<h3 id="panel-animation" class="w-100 text-center">Hoteles: 26 € <br> Vuelos: 226 €</h3>
 				</div>
 			</div>
 		</div>
+
 	</div>
 
 	<footer>
@@ -312,43 +222,6 @@
 			</div>
 		</div>
 	</footer>
-
-	<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title text-light" id="exampleModalLabel">Modal title</h5>
-					<button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<table class="table table-striped table-dark text-center">
-						<thead>
-							<tr>
-								<th scope="col">Days</th>
-								<th scope="col">Hotel</th>
-								<th scope="col">People</th>
-								<th scope="col">Price</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">3</th>
-								<td>Eurostars Ciudad de La Coruña</td>
-								<td>2</td>
-								<td>101 €</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-success text-uppercase" data-dismiss="modal">pay</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
