--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 				<div class="col-sm">
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
-							<button class="btn btn-info rounded-0 border-0 text-uppercase" type="button" id="button-addon1">search</button>
+							<a class="btn btn-info rounded-0 border-0 text-uppercase text-white" type="button" id="button-addon1" href="filtro.html">search</a>
 						</div>
 						<input type="text" class="form-control rounded-0 border-0" placeholder="Search" aria-label="Example text with button addon" aria-describedby="button-addon1">
 					</div>
