--- a/filtro.html
+++ b/filtro.html
@@ -130,8 +130,8 @@
 	<div class="container-fluid">
 		<div class="container">
 			<div class="card mt-2 rounded-0 shadow-sm">
-				<div class="row">
-					<div class="col-sm-2">
+				<div class="row d-flex align-items-center">
+					<div class="col-md-3">
 						<img class="card-img w-100 h-100 rounded-0" src="img/p01.jpg" alt="Card image">
 					</div>
 					<div class="col-sm-6">
@@ -159,8 +159,8 @@
 			</div>
 
 			<div class="card mt-2 rounded-0 shadow-sm">
-				<div class="row">
-					<div class="col-sm-2">
+				<div class="row d-flex align-items-center">
+					<div class="col-md-3">
 						<img class="card-img w-100 h-100 rounded-0" src="img/p02.jpg" alt="Card image">
 					</div>
 					<div class="col-sm-6">
@@ -188,8 +188,8 @@
 			</div>
 
 			<div class="card mt-2 rounded-0 shadow-sm">
-				<div class="row">
-					<div class="col-sm-2">
+				<div class="row d-flex align-items-centers">
+					<div class="col-md-3">
 						<img class="card-img w-100 h-100 rounded-0" src="img/p03.jpg" alt="Card image">
 					</div>
 					<div class="col-sm-6">
@@ -217,9 +217,9 @@
 			</div>
 
 			<div class="card mt-2 rounded-0 shadow-sm">
-				<div class="row">
-					<div class="col-sm-2">
-						<img class="card-img w-100 h-100 rounded-0" src="img/p03.jpg" alt="Card image">
+				<div class="row d-flex align-items-center">
+					<div class="col-md-3">
+						<img class="card-img w-100 h-100 rounded-0" src="img/p04.jpg" alt="Card image">
 					</div>
 					<div class="col-sm-6">
 						<h4 class="mt-1">Riazor Hotel</h4>
