--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 				<div class="col-sm">
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
-							<a class="btn btn-info rounded-0 border-0 text-uppercase text-white" type="button" id="button-addon1" href="filtro.html">search</a>
+							<button class="btn btn-info rounded-0 border-0 text-uppercase text-white" type="button" id="button-addon1" href="filtro.html">search</button>
 						</div>
 						<input type="text" class="form-control rounded-0 border-0" placeholder="Search" aria-label="Example text with button addon" aria-describedby="button-addon1">
 					</div>
@@ -151,16 +151,18 @@
 
 			<div class="rounded-0 border-0 m-1 card text-white bg-dark sidney">
 				<img class="card-img rounded-0" src="img/portada03.jpg" alt="Card image">
-				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap">
-					<h2 class="card-title text-uppercase">sídney</h2>
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap" id="fade-2">
+					<h3 class="card-title text-uppercase w-100 text-center">sídney</h3>
+					<h3 id="panel-fade-2" class="w-100 text-center">Hoteles: 66€ <br>-<br> Vuelos: 126€</h3>
 				</div>
 			</div>
 
 
 			<div class="rounded-0 border-0 m-1 card text-white bg-dark barcelona">
 				<img class="card-img rounded-0" src="img/portada04.jpg" alt="Card image">
-				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap">
-					<h2 class="card-title text-uppercase">barcelona</h2>
+				<div class="card-img-overlay d-flex align-content-center justify-content-center flex-wrap" id="fade-3">
+					<h3 class="card-title text-uppercase w-100 text-center">barcelona</h3>
+					<h3 id="panel-fade-3" class="w-100 text-center">Hoteles: 66€ <br>-<br> Vuelos: 126€</h3>
 				</div>
 			</div>
 
