--- a/producto.html
+++ b/producto.html
@@ -161,16 +161,16 @@
 							<span class="sr-only">Next</span>
 						</a>
 					</div>
-					<button type="button" class="btn btn-outline-success text-uppercase mt-3 float-right" data-toggle="modal" data-target="#modal">contract</button>
+					<button type="button" class="btn btn-outline-success text-uppercase mt-3 float-right w-100" data-toggle="modal" data-target="#modal">contract</button>
 				</div>
 				<div class="col-sm">
 					<div class="accordion mt-5" id="accordionExample">
 						<div class="card rounded-0">
 							<div class="card-header" id="headingOne">
 								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									<button class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 										hotel information
-									</a>
+									</button>
 								</h2>
 							</div>
 
@@ -185,9 +185,9 @@
 						<div class="card rounded-0">
 							<div class="card-header" id="headingTwo">
 								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+									<button class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 										Servicios destacados
-									</a>
+									</button>
 								</h2>
 							</div>
 							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -218,9 +218,9 @@
 						<div class="card rounded-0">
 							<div class="card-header" id="headingThree">
 								<h2 class="mb-0">
-									<a class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+									<button class="btn collapsed text-uppercase" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 										Opinions
-									</a>
+									</button>
 								</h2>
 							</div>
 							<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
