--- a/producto.html
+++ b/producto.html
@@ -14,7 +14,7 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="home.html">Hotel2Day</a>
+		<a class="navbar-brand" href="index.html">Hotel2Day</a>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="navbar-nav m-auto">
